update gitignore, factor in threads per block, handle accelwattch parsed output

--- a/gen_sim_power_csv.ipynb
+++ b/gen_sim_power_csv.ipynb
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "9a601b19-384d-473a-a376-7b4abaa737e9",
    "metadata": {},
    "outputs": [
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "1738e625-28ff-46c6-929e-ca174c255675",
    "metadata": {},
    "outputs": [
@@ -2030,57 +2030,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAR_SYNC 587.18\n",
-      "BMOV_32_CLEAR 587.18\n",
-      "BRA 587.18\n",
-      "BREAK 587.18\n",
-      "BSSY 587.18\n",
-      "BSYNC 587.18\n",
-      "CALL_REL_NOINC 587.18\n",
-      "DEPBAR_LE 574.37\n",
-      "EXIT 587.18\n",
-      "LDC 603.45\n",
-      "LDG_E_SYS 1554.51\n",
-      "LDS_U 636.18\n",
-      "MUFU.EX2 905.54\n",
-      "MUFU_RCP64H 696.15\n",
-      "MUFU_RCP 905.54\n",
-      "NOP 574.37\n",
-      "RET_REL_NODEC 587.18\n",
-      "S2R 603.45\n",
-      "STG_E_SYS 1717.07\n",
-      "STS 671.25\n",
-      "TLD 679.43\n"
+      "BAR_SYNC 18.35\n",
+      "BMOV_32_CLEAR 18.35\n",
+      "BRA 18.35\n",
+      "BREAK 18.35\n",
+      "BSSY 18.35\n",
+      "BSYNC 18.35\n",
+      "CALL_REL_NOINC 18.35\n",
+      "DEPBAR_LE 17.95\n",
+      "EXIT 18.35\n",
+      "LDC 18.86\n",
+      "LDG_E_SYS 48.58\n",
+      "LDS_U 19.88\n",
+      "MUFU.EX2 28.30\n",
+      "MUFU_RCP64H 21.75\n",
+      "MUFU_RCP 28.30\n",
+      "NOP 17.95\n",
+      "RET_REL_NODEC 18.35\n",
+      "S2R 18.86\n",
+      "STG_E_SYS 53.66\n",
+      "STS 20.98\n",
+      "TLD 21.23\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "BAR_SYNC_SM7_QV100_k1           71.87030\n",
-       "BMOV_32_CLEAR_SM7_QV100_k1      71.87030\n",
-       "BRA_SM7_QV100_k1                71.87030\n",
-       "BREAK_SM7_QV100_k1              71.87030\n",
-       "BSSY_SM7_QV100_k1               71.87030\n",
-       "BSYNC_SM7_QV100_k1              71.87030\n",
-       "CALL_REL_NOINC_SM7_QV100_k1     71.87030\n",
-       "DEPBAR_LE_SM7_QV100_k1          70.30266\n",
-       "EXIT_SM7_QV100_k1               71.87030\n",
-       "LDC_SM7_QV100_k1                73.86242\n",
-       "LDG_E_SYS_SM7_QV100_k1         190.27240\n",
-       "LDS_U_SM7_QV100_k1              77.86782\n",
-       "MUFU.EX2_SM7_QV100_k1          110.83812\n",
-       "MUFU_RCP64H_SM7_QV100_k1        85.20892\n",
-       "MUFU_RCP_SM7_QV100_k1          110.83812\n",
-       "NOP_SM7_QV100_k1                70.30266\n",
-       "RET_REL_NODEC_SM7_QV100_k1      71.87030\n",
-       "S2R_SM7_QV100_k1                73.86242\n",
-       "STG_E_SYS_SM7_QV100_k1         210.16990\n",
-       "STS_SM7_QV100_k1                82.16082\n",
-       "TLD_SM7_QV100_k1                83.16212\n",
+       "BAR_SYNC          18.349239\n",
+       "BMOV_32_CLEAR     18.349239\n",
+       "BRA               18.349239\n",
+       "BREAK             18.349239\n",
+       "BSSY              18.349239\n",
+       "BSYNC             18.349239\n",
+       "CALL_REL_NOINC    18.349239\n",
+       "DEPBAR_LE         17.949004\n",
+       "EXIT              18.349239\n",
+       "LDC               18.857848\n",
+       "LDG_E_SYS         48.578533\n",
+       "LDS_U             19.880469\n",
+       "MUFU.EX2          28.298131\n",
+       "MUFU_RCP64H       21.754728\n",
+       "MUFU_RCP          28.298131\n",
+       "NOP               17.949004\n",
+       "RET_REL_NODEC     18.349239\n",
+       "S2R               18.857848\n",
+       "STG_E_SYS         53.658573\n",
+       "STS               20.976517\n",
+       "TLD               21.232159\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,8 @@
     "# Step 2: Sum the values across the filtered columns\n",
     "calc_power = filtered_df.sum(axis=1)  # Sum across all rows and columns\n",
     "\n",
-    "inst_count = 80\n",
+    "#Note that 80 blocks with 32 threads per block\n",
+    "inst_count = 80*32 \n",
     "# Step 3: Calculate energy in Joules\n",
     "frequency = 1132e6 #This is the frequency that is being used by AccelWattch #1530e6  # 1530 MHz\n",
     "frequency = 1530e6  # 1530 MHz\n",
@@ -2115,7 +2116,7 @@
     "# Step 5: Show results\n",
     "for index, energy in energy_picojoules.items():\n",
     "    print(f\"{index} {energy:.2f}\")\n",
-    "calc_power"
+    "energy_picojoules"
    ]
   },
   {
@@ -2125,7 +2126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write = True\n",
+    "write = False\n",
     "if write:\n",
     "    energy_picojoules.index = energy_picojoules.index.str.replace(\"_\", \".\")\n",
     "    energy_picojoules['MUFU.RCP64H'] = energy_picojoules['MUFU.RCP']\n",
@@ -2138,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "9012a347",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2149,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
